--- a/src/layout2.css
+++ b/src/layout2.css
@@ -186,6 +186,7 @@
   opacity: 0.9;
   z-index: 1000;
   flex: 1;
+  /* height: 20px; */
   /* border: 2px solid orange; */
 }
 
@@ -199,6 +200,7 @@
   padding: 5px 10px 0 10px;
   width: 100%;
   /* border: 1px solid black; */
+  /* max-height: 6vh; */
 }
 
 .footerNameAddy {
@@ -339,6 +341,19 @@
     font-size: calc(1.4 * var(--rem));
   }
 }
+
+/* @media (max-height: 600px) {
+  .footer {
+    font-size: calc(1.2 * var(--rem));
+  }
+  .footerTop {
+    padding: 2px 10px 0 10px;
+  }
+  .footerSocialMediaIcon img {
+    height: 25px;
+    width: 25px;
+  }
+} */
 
 /* Portrait tablets and large phones */
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
